--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+url: http://manuel-woelker.github.com
+title: Continuous Development
+subtitle: Don't stop me now
+author: Manuel Woelker
 simple_search: http://google.com/search
 description:
 
@@ -58,8 +58,8 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.ht
 # ----------------------- #
 
 # Github repositories
-github_user:
-github_repo_count: 0
+github_user: manuel-woelker
+github_repo_count: 4
 github_show_profile_link: true
 github_skip_forks: true
 
